ocf-io/ocf-io_Service_ocf-io.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocf-io
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    transpire.ocf.io/deployment: ocf-io
