ocf-io/ocf-io_Ingress_ocf-io.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    io.cilium/websocket: enabled
    kubernetes.io/tls-acme: 'true'
    projectcontour.io/websocket-routes: /
  name: ocf-io
spec:
  ingressClassName: cilium
  rules:
  - host: '*.ocf.io'
    http:
      paths:
      - backend:
          service:
            name: ocf-io
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - '*.ocf.io'
    secretName: ocf-io-tls
